# emacs-mcp-server

./: LICENSE  PLAN.md  README.md  emacs_client.py  emacs_mcp.py  emacs_mcp_server.py  mcp_server.py  pyproject.toml  pytest.ini  server.py  test.py  test_emacs_mcp_server.py  test_server.py
src/emacs_mcp_server/: __init__.py  emacs_client.py  main.py  models.py  server.py
tests/: __init__.py  test_emacs_client.py  test_models.py
