[project]
name = "emacs-mcp-server-amp"
version = "0.1.0"
description = "MCP server for programmatic control of Emacs"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mcp",
]

[project.scripts]
emacs-mcp-server = "emacs_mcp_server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["emacs_mcp_server.py"]
