[project]
name = "emacs-mcp-server"
version = "0.1.0"
description = "MCP server for interacting with Emacs via emacsclient"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    {name = "Jade Michael Thornton", email = "user@jmthornton.net"}
]
dependencies = [
    "fastmcp>=0.5.0",
]

[project.scripts]
emacs-mcp-server = "emacs_mcp:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
include = ["emacs_mcp.py"]

[tool.uv]
dev-dependencies = []
