[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "emacs-mcp-server"
version = "0.1.0"
description = "MCP server for programmatic Emacs control and introspection"
authors = [
    {name = "Emacs MCP Server", email = "emacs-mcp@example.com"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=0.2.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
emacs-mcp-server = "emacs_mcp_server.main:main"

[tool.black]
line-length = 88
target-version = ['py312']

[tool.ruff]
line-length = 88
target-version = "py312"
select = ["E", "F", "W", "I"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
